WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12868
parts of the CSS classes in this simple SVG example are not applied
https://bugs.webkit.org/show_bug.cgi?id=12868
Summary
parts of the CSS classes in this simple SVG example are not applied
Andreas Neumann
Reported
2007-02-23 03:33:33 PST
In this example some CSS classes are correctly applied, some are not. I don't know if there is something wrong in the CSS definitions, but the example works fine in Opera, Mozilla, Adobe SVG viewer and Batik. As an example, the first path element within the group with the id "menuStep1" renders with a black fill, but should render with the fill "steelblue" according to the css class "menuBox2" (defined in file
http://www.carto.net/neumann/webkitsvgbugs/diamlstyles.css
). Also some of the text styles, e.g. for the text with the class "menuText" are not applied correctly. Thank you for having a look at this example!
Attachments
First attempt
(8.33 KB, patch)
2007-03-03 08:46 PST
,
Rob Buis
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2007-03-03 08:46:59 PST
Created
attachment 13465
[details]
First attempt There is something funky with the default param value for CSSStyleSheet::parseString. The base class used false, CSSStyleSheet::parseString used true. I am not sure whether that should work or is portable, it doesn't work on my macbook pro, so for now to fix the bug I simply specify true in the call in ProcessingInstruction.cpp. Cheers, Rob.
Nikolas Zimmermann
Comment 2
2007-03-04 03:40:57 PST
That's really funky. Does your change not affect any other layout tests? Niko
Rob Buis
Comment 3
2007-03-04 13:03:55 PST
Hi Niko, (In reply to
comment #2
)
> That's really funky. Does your change not affect any other layout tests?
No, it didnt. I didnt really investigate, but I guess there are no case-insensitivity problems (use of fooBar as class), like the testcase on this bug seemed to have. Cheers, Rob.
Darin Adler
Comment 4
2007-03-04 21:59:41 PST
Comment on
attachment 13465
[details]
First attempt r=me
Rob Buis
Comment 5
2007-03-05 01:29:25 PST
Landed in
r19960
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug