        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12868
        parts of the CSS classes in this simple SVG example are not applied

        Make sure the xml stylesheets are parsed in strict mode.



Canonical link: https://commits.webkit.org/16783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19960 268f45cc-cd09-0410-ab3c-d52691b4dbfc