WebCore/dom/ProcessingInstruction.cpp
@@ -217,7 +217,7 @@ void ProcessingInstruction::setXSLStyleSheet(const String& url, const String& sh
 
 void ProcessingInstruction::parseStyleSheet(const String& sheet)
 {
-    m_sheet->parseString(sheet);
+    m_sheet->parseString(sheet, true);
     if (m_cachedSheet)
         m_cachedSheet->deref(this);
     m_cachedSheet = 0;
